2002-06-03  Johannes Zellner  <johannes@zellner.org>

	* term/svg.trm:
	- new pointtypes for svg (as X11 / post)
	- implemented pm3d 'splot ... with points lt palette'
	- implemented pm3d 'splot ... with lines  lt palette'
	- implemented 'filledboxes'

2002-05-29  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in: Explicit linking with libfreetype does not add
	-lfreetype to TERMLIBS if successful.

2002-05-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/internal.c (BAD_DEFAULT): Fix typo in message text:
 	"internal" <-- "interal".

	* term/svg.trm (SVG_init): Change self-description of SVG output
 	file to no longer give the name of the original author of svg.trm.
  	Output the version number and patchlevel of gnuplot instead.

2002-05-29  Johannes Zellner  <johannes@zellner.org>

	* term/x11.trm src/gplt_x11.c term/README: first 13 pointtypes
 	like in the postscript driver. --> new point types circle and
 	upside-down triangle and all shapes also filled.

	point  pointtype
	    0          1  plus
	    1          2  X
	    2          3  star
	    3          4  box
	    4          5  box                   filled
	    5          6  circle
	    6          7  circle (disk)         filled
	    7          8  triangle
	    8          9  triangle              filled
	    9         10  upside down triangle
	   10         11  upside down triangle  filled
	   11         12  diamond
	   12         13  diamond               filled

	* gplt_x11.c: replaced the info 'drawing ...' in the xwindow's
 	title bar by a watch cursor. Removed the message which tells how
 	many pm3d colors could be allocated.

2002-05-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw config/makefile.os2:
 	Support all compile options for the new gd driver.

	* config/makefile.mgw: Added compile options for the pdf driver.

2002-05-23  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* lisp/Makefile.in: New install-els target to install the .el
 	files.