@@ -1,3 +1,8 @@
+2002-06-04  Johannes Zellner  <johannes@zellner.org>
+
+	* src/readline.c: install a SIGWINCH handler to solve BUG 533101
+	'gnuplot exits immediately when the terminal is resized'.
+
 2002-06-03  Johannes Zellner  <johannes@zellner.org>
 
 	* term/svg.trm:
@@ -534,7 +539,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/05/29 20:26:51 $).
+	last modification date (from the tag $Date: 2002/06/03 21:43:48 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
